# neko-legends-control-center

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
catalog/: tools.json
scripts/: build-portable.ps1  generate-suite-letter-icons.ps1  run-portable.ps1
specs/: control-center-phase-2-capability-provider-catalog.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/fixtures/: capability-provider-catalog.v1.json
