[package]
name = "neko-legends-control-center"
version = "26.6.22"
description = "A lightweight launcher and update hub for Neko Legends apps"
authors = ["Neko Legends"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
zip = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
